# telegram-bot-message-searcher

./: .gitignore  config_template.yaml  docker-compose.yaml  dockerfile  pyproject.toml
src/: bot.py  config.py  consts.py  main.py
src/filters/: message_text_filters.py
src/plugins/: handlers.py
src/utils/: fuzzy_filters.py  utils.py
tests/: test.py
