[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mikhail Ivanov <m.ivanov0427@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
rapidfuzz = "^3.4.0"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = "src.main:main"
test = "tests.test:test"